k8s/awx-basic/default/awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx

  rules:
  - host: awx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-operator-awx-demo-service
            port:
              number: 80
